log/build_2024-06-14_14-31-15/planning/stdout_stderr.log
/home/nvidia/.local/lib/python3.8/site-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
running egg_info
writing ../../build/planning/planning.egg-info/PKG-INFO
writing dependency_links to ../../build/planning/planning.egg-info/dependency_links.txt
writing entry points to ../../build/planning/planning.egg-info/entry_points.txt
writing requirements to ../../build/planning/planning.egg-info/requires.txt
writing top-level names to ../../build/planning/planning.egg-info/top_level.txt
reading manifest file '../../build/planning/planning.egg-info/SOURCES.txt'
writing manifest file '../../build/planning/planning.egg-info/SOURCES.txt'
running build
running build_py
copying planning/info_pub.py -> /home/nvidia/GoalPlanning/build/planning/build/lib/planning
running install
running install_lib
copying /home/nvidia/GoalPlanning/build/planning/build/lib/planning/info_pub.py -> /home/nvidia/GoalPlanning/install/planning/lib/python3.8/site-packages/planning
byte-compiling /home/nvidia/GoalPlanning/install/planning/lib/python3.8/site-packages/planning/info_pub.py to info_pub.cpython-38.pyc
  File "/home/nvidia/GoalPlanning/install/planning/lib/python3.8/site-packages/planning/info_pub.py", line 81
    PurDistdiff = (CurrentEastPos - GlobalENUPurSuitPoint[PurSuitPtr][0]) +
                                                                          ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/nvidia/GoalPlanning/install/planning/lib/python3.8/site-packages/planning-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/planning/planning.egg-info to /home/nvidia/GoalPlanning/install/planning/lib/python3.8/site-packages/planning-0.0.0-py3.8.egg-info
running install_scripts
Installing planning_node script to /home/nvidia/GoalPlanning/install/planning/lib/planning
writing list of installed files to '/home/nvidia/GoalPlanning/build/planning/install.log'
